--- a/test/awa.html
+++ b/test/awa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 
-<head>
+<link>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hans - 亨</title>
@@ -9,12 +9,14 @@
     <meta property="og:title" content="Hans - 亨" />
     <meta property="og:image" content="./avatar.gif" />
     <meta property="og:description" content="來自台灣的高中生，擅長與後端打交道" />
+    <script src="https://cdn.master.co/css"></script>
+
     <style>
         body,
         html {
+            height: 100%;
             margin: 0;
             padding: 0;
-            height: 100%;
             font-family: Arial, sans-serif;
             background-color: #424549;
             display: flex;
@@ -27,9 +29,9 @@
         }
 
         .profile-container {
-            width: 100%;
+            width: 600px;
             max-width: 600px;
-            /*max-height: 95%;*/
+            /* width: 600px; */
             margin: 20px;
             background-color: white;
             border-radius: 25px;
@@ -251,95 +253,6 @@
         }
 
 
-        .carousel {
-            position: relative;
-            overflow: hidden;
-            border-radius: 10px;
-            width: 100%;
-            margin-bottom: 20px;
-        }
-
-        .carousel-inner {
-            display: flex;
-            transition: transform 0.5s ease;
-            width: 95%;
-        }
-
-        .carousel-item {
-            flex: 0 0 100%;
-            width: 100%;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            padding: 10px;
-        }
-
-        .experience-block {
-            width: calc(50% - 10px);
-            background-color: #f8f9fa;
-            border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-        }
-
-        .experience-block img {
-            width: 100%;
-            aspect-ratio: 1 / 1;
-            object-fit: cover;
-            display: block;
-        }
-
-        .experience-text {
-            padding: 15px;
-        }
-
-        .experience-text h2 {
-            font-size: 16px;
-            margin-bottom: 5px;
-        }
-
-        .experience-text p {
-            font-size: 14px;
-            margin: 0;
-        }
-
-        .carousel-control {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background: rgba(0, 0, 0, 0.5);
-            color: white;
-            padding: 10px 15px;
-            text-decoration: none;
-            border-radius: 50%;
-            font-size: 18px;
-            z-index: 10;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 10px;
-            height: 20px;
-        }
-
-        .carousel-control.prev {
-            left: 10px;
-        }
-
-        .carousel-control.next {
-            right: 10px;
-        }
-
-        .carousel-indicators {
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            display: flex;
-            gap: 10px;
-            z-index: 10;
-        }
-
         .indicator {
             width: 10px;
             height: 10px;
@@ -406,6 +319,12 @@
                 /* 進一步減小箭頭大小 */
             }
         }
+
+        @media (max-width: 1280px) {
+            .profile-container{
+                width: 100%;
+            }
+        }
     </style>
 
 </head>
@@ -433,8 +352,7 @@
             <div id="page-home" style="display: block;">
                 <div class="about-me">
                     <h3>關於我</h3>
-                    <p id="info-text">
-                        我叫亨，是一名資訊科高職生，擅長編寫Python程式，並熱衷於運動，特別是排球。我擁有開發Line機器人和Discord機器人的經驗，並且能夠製作各種網站。在學習和運動中，我不斷挑戰自己，提升技能，希望未來能在資訊科技領域有所突破。我的目標是結合興趣與專業，創造出更多有價值的應用程式和平台，然後賺很多的錢。
+                    <p>我叫洪碩亨，是一名資訊科高職生，擅長編寫Python程式，並熱衷於運動，特別是排球。我擁有開發Line機器人和Discord機器人的經驗，並且能夠製作各種網站。在學習和運動中，我不斷挑戰自己，提升技能，希望未來能在資訊科技領域有所突破。我的目標是結合興趣與專業，創造出更多有價值的應用程式和平台，然後賺很多的錢。
                     </p>
                 </div>
                 <div class="join-date">
@@ -446,62 +364,29 @@
             <div id="page-info" style="display: none;">
                 <div class="about-me">
                     <h3>經歷</h3>
-                    <div class="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item">
-                                <div class="experience-block">
-                                    <img src="sitcon-2024.png" alt="2024-SITCON">
-                                    <div class="experience-text">
-                                        <h2>2024 - SITCON</h2>
-                                        <p>場務</p>
-                                    </div>
-                                </div>
-                                <div class="experience-block">
-                                    <img src="coscup-2024.jpg" alt="2024-COSCUP">
-                                    <div class="experience-text">
-                                        <h2>2024 - COSCUP</h2>
-                                        <p>會眾</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div class="experience-block">
-                                    <img src="https://www.claudeusercontent.com/api/placeholder/400/400"
-                                        alt="2023 - COSCUP">
-                                    <div class="experience-text">
-                                        <h2>2023 - COSCUP</h2>
-                                        <p>會眾</p>
-                                    </div>
-                                </div>
-                                <div class="experience-block">
-                                    <img src="THJCC.png" alt="第二屆 - THJCC">
-                                    <div class="experience-text">
-                                        <h2>第二屆 - THJCC</h2>
-                                        <p>文書長</p>
-                                    </div>
-                                </div>
-
-                            </div>
-                            <div class="carousel-item">
-                                <div class="experience-block">
-                                    <img src="mif.png" alt="第二屆 - THJCC">
-                                    <div class="experience-text">
-                                        <h2>【MIF】可能是免費託管</h2>
-                                        <p>擁有者</p>
-                                    </div>
-                                </div>
-                                <div class="experience-block">
-                                    <img src="hbot.png" alt="2023 - COSCUP">
-                                    <div class="experience-text">
-                                        <h2>Hbot</h2>
-                                        <p>開發者</p>
-                                    </div>
-                                </div>
+                    <div class="owl-carousel owl-theme">
+                        <div class="item">
+                            <img src="sitcon-2024.png" alt="2024-SITCON">
+                            <div class="experience-text">
+                                <h3>2024 - SITCON</h3>
+                                <p>場務</p>
                             </div>
                         </div>
-                        <a href="#" class="carousel-control prev">&lt;</a>
-                        <a href="#" class="carousel-control next">&gt;</a>
-                        <div class="carousel-indicators"></div>
+                        <div class="item">
+                            <img src="coscup-2024.jpg" alt="2024-COSCUP">
+                            <div class="experience-text">
+                                <h3>2024 - COSCUP</h3>
+                                <p>會眾</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="https://www.claudeusercontent.com/api/placeholder/400/400"
+                                alt="2023 - COSCUP">
+                            <div class="experience-text">
+                                <h3>2023 - COSCUP</h3>
+                                <p>會眾</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -567,7 +452,7 @@
                                     <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                                     <g id="SVGRepo_iconCarrier">
                                         <path
-                                            d="M5 8L10 13M4 14L10 8L12 5M2 5H14M7 2H8M12.913 17H20.087M12.913 17L11 21M12.913 17L15.7783 11.009C16.0092 10.5263 16.1246 10.2849 16.2826 10.2086C16.4199 10.1423 16.5801 10.1423 16.7174 10.2086C16.8754 10.2849 16.9908 10.5263 17.2217 11.009L20.087 17M20.087 17L22 21"
+                                            d="M6 6H6.01M6 18H6.01M5.2 10H18.8C19.9201 10 20.4802 10 20.908 9.78201C21.2843 9.59027 21.5903 9.28431 21.782 8.90798C22 8.48016 22 7.92011 22 6.8V5.2C22 4.0799 22 3.51984 21.782 3.09202C21.5903 2.71569 21.2843 2.40973 20.908 2.21799C20.4802 2 19.9201 2 18.8 2H5.2C4.07989 2 3.51984 2 3.09202 2.21799C2.71569 2.40973 2.40973 2.71569 2.21799 3.09202C2 3.51984 2 4.07989 2 5.2V6.8C2 7.92011 2 8.48016 2.21799 8.90798C2.40973 9.28431 2.71569 9.59027 3.09202 9.78201C3.51984 10 4.0799 10 5.2 10ZM5.2 22H18.8C19.9201 22 20.4802 22 20.908 21.782C21.2843 21.5903 21.5903 21.2843 21.782 20.908C22 20.4802 22 19.9201 22 18.8V17.2C22 16.0799 22 15.5198 21.782 15.092C21.5903 14.7157 21.2843 14.4097 20.908 14.218C20.4802 14 19.9201 14 18.8 14H5.2C4.07989 14 3.51984 14 3.09202 14.218C2.71569 14.4097 2.40973 14.7157 2.21799 15.092C2 15.5198 2 16.0799 2 17.2V18.8C2 19.9201 2 20.4802 2.21799 20.908C2.40973 21.2843 2.71569 21.5903 3.09202 21.782C3.51984 22 4.0799 22 5.2 22Z"
                                             stroke="#000000" stroke-width="2" stroke-linecap="round"
                                             stroke-linejoin="round"></path>
                                     </g>
@@ -638,6 +523,9 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js" ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css"></script>
     <script>
         let home_page = document.querySelector("#page-home")
         let info_page = document.querySelector("#page-info")
@@ -646,83 +534,31 @@
             home_page.style.display = "none"
             info_page.style.display = "none"
             project_page.style.display = "none"
-            if (page_name == "project") {
-                project_page.style.display = "block"
-                location.hash = "#project"
+            if (page_name == "home") {
+                home_page.style.display = "block"
             } else if (page_name == "info") {
                 info_page.style.display = "block"
-                location.hash = "#info"
             } else {
-                home_page.style.display = "block"
-                location.hash = ""
+                project_page.style.display = "block"
             }
         }
-        function link_go() {
-            if (location.hash != "") {
-                console.log(`跳轉到 ${location.hash}`)
-                go_page(location.hash.replace("#", ""))
-            }
+
+        function show_name(t){
+            t.textContent="Hans (洪碩亨)"
         }
-        link_go()
-
-        let is_show = false
-        function show_name(t) {
-            let info_text = document.querySelector("#info-text")
-            if (is_show) {
-                is_show = false
-                t.textContent = "Hans (亨)"
-                info_text.textContent = info_text.textContent.replace("洪碩亨", "亨")
-            }
-            else {
-                is_show = true
-                t.textContent = "Hans (洪碩亨)"
-                info_text.textContent = info_text.textContent.replace("亨", "洪碩亨")
-            }
-
-        }
-
-        // 更新后的轮播功能
-        document.addEventListener('DOMContentLoaded', function () {
-            const carousel = document.querySelector('.carousel-inner');
-            const items = document.querySelectorAll('.carousel-item');
-            const prevButton = document.querySelector('.carousel-control.prev');
-            const nextButton = document.querySelector('.carousel-control.next');
-            const indicatorsContainer = document.querySelector('.carousel-indicators');
-            let currentIndex = 0;
-
-            // 创建指示器
-            items.forEach((_, index) => {
-                const indicator = document.createElement('div');
-                indicator.classList.add('indicator');
-                if (index === 0) indicator.classList.add('active');
-                indicator.addEventListener('click', () => showItem(index));
-                indicatorsContainer.appendChild(indicator);
-            });
-
-            const indicators = document.querySelectorAll('.indicator');
-
-            function showItem(index) {
-                carousel.style.transform = `translateX(-${index * 104}%)`;
-                indicators[currentIndex].classList.remove('active');
-                indicators[index].classList.add('active');
-                currentIndex = index;
-            }
-
-            prevButton.addEventListener('click', function (e) {
-                e.preventDefault();
-                let index = currentIndex - 1;
-                if (index < 0) index = items.length - 1;
-                showItem(index);
-            });
-
-            nextButton.addEventListener('click', function (e) {
-                e.preventDefault();
-                let index = currentIndex + 1;
-                if (index >= items.length) index = 0;
-                showItem(index);
-            });
-
-        });
+    </script>
+    <script>
+        $(window).on("load",function() {
+            $('.owl-carousel').owlCarousel({
+                loop:true,
+                margin:10,
+                nav:true,   /* 控制列 */
+                items:2,  /* 一頁出現的張數 */
+                autoplay:true,  /* 自動輪播 */
+                autoplayTimeout:1500,  /* 輪播速度 */
+                autoplayHoverPause:true
+                });
+        })
     </script>
 
 </body>
